# Camera-odroid

./: readme.md
g1-vlsi407-odroid/: CMakeLists.txt
g1-vlsi407-odroid/include/: Camera.h  GpioService.h  TcpService.h
g1-vlsi407-odroid/src/: Camera.cpp  TcpService.cpp  main.cpp
g1-vlsi407-odroid/src/gpio/: GpioService.cpp
g1-vlsi407-poste/: CMakeLists.txt  Doxyfile
g1-vlsi407-poste/include/: QrManager.h  TcpService.h
g1-vlsi407-poste/src/: QrManager.cpp  TcpService.cpp  main.cpp
